# observer

./: .gitignore  README.md  constraints.txt  pyproject.toml
docker/hailo-dfc/: Dockerfile
docs/: audio-capture.md  camera-pi-setup.md  hailo-deployment.md  processor-pi-install.md
observer/: __init__.py  cli.py  config.py  dataset.py  evaluate.py  logging_setup.py  naming.py  worker.py
observer/ingest/: watcher.py
observer/pipeline/: aggregate.py  decode.py  motion.py  processor.py  tracking.py  trajectory.py
observer/pipeline/audio/: __init__.py  base.py  null_backend.py  panns_backend.py
observer/pipeline/detector/: __init__.py  base.py  hailo_backend.py  null_backend.py  ultralytics_backend.py  yoloworld_backend.py
observer/storage/: db.py  files.py
observer/web/: app.py  events_bus.py
observer/web/static/: app.js  style.css
observer/web/templates/: _calendar.html  _card.html  _clip_grid.html  _day_groups.html  _event_grid.html  _label_box.html  _timeline.html  base.html  clip_detail.html  event_detail.html  index.html
scripts/: make_sample.py
tests/: test_aggregate.py  test_audio.py  test_evaluate.py  test_naming.py  test_pipeline.py  test_trajectory.py
tools/: label_clips.py  observer-capture.service  pi_capture.py
